# slackoff

./: .appveyor.yml  .pylint.ini  .tool-versions  .verchew.ini  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  mkdocs.yml  pyproject.toml  scent.py
.github/workflows/: main.yml
docs/: requirements.txt
docs/about/: license.md
slackoff/: __init__.py  __main__.py  browser.applescript  browser.py  cli.py  config.py  script.py  slack.applescript  slack.py  utils.py
slackoff/tests/: conftest.py  test_browser.py  test_config.py  test_slack.py  test_utils.py
tests/: conftest.py  test_cli.py
