[tool.poetry]

name = "slackoff"
version = "1.2"
description = "Automatically sign out of Slack workspaces on macOS."

license = "MIT"

authors = ["Jace Browning <jacebrowning@gmail.com>"]

readme = "README.md"

homepage = "https://pypi.org/project/slackoff"
documentation = "https://slackoff.readthedocs.io"
repository = "https://github.com/jacebrowning/slackoff"

keywords = [
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
]

[tool.poetry.dependencies]

python = "^3.10"

click = "^8.0"
minilog = "^2.1"
applescript = "^2021.2.9"
datafiles = "^2.2.2"
pync = "^2.0.3"

[tool.poetry.group.dev.dependencies]

# Formatters
black = "^22.1"
isort = "^5.10"

# Linters
mypy = "^1.9"
pydocstyle = "^6.1"
pylint = "^3.0"

# Testing
pytest = "^6.2"
pytest-describe = "*"
pytest-expecter = "*"
pytest-random = "*"
pytest-cov = "*"
freezegun = "*"

# Reports
coveragespace = "*"

# Documentation
mkdocs = "^1.4"
pygments = "^2.11.1"

# Tooling
pyinstaller = "*"
sniffer = "*"
MacFSEvents = { version = "*", platform = "darwin" }
ipython = "^7.12.0"

[tool.poetry.requires-plugins]

poetry-plugin-export = ">=1.8"

[tool.poetry.scripts]

slackoff = "slackoff.cli:main"

[tool.black]

quiet = true

[tool.isort]

profile = "black"

[tool.mypy]

ignore_missing_imports = true
no_implicit_optional = true
check_untyped_defs = true

cache_dir = ".cache/mypy/"

plugins = "datafiles.plugins:mypy"

[tool.pytest.ini_options]

addopts = """
--strict-markers

-r sxX
--show-capture=log

--cov-report=html
--cov-report=term-missing:skip-covered
--no-cov-on-fail
"""

cache_dir = ".cache/pytest/"

markers = []

[build-system]

requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
